2279.   [bug]           Use setsockopt(SO_NOSIGPIPE), when available,
			to protect applications from receiving spurious
			SIGPIPE signals when using the resolver.

2278.	[bug]		win32: handle the case where Windows returns no
			searchlist or DNS suffix. [RT #17354]

2277.	[bug]		Empty zone names were not correctly being caught at
			in the post parse checks. [RT #17357]

2276.	[bug]		Install <dst/gssapi.h>.  [RT# 17359]

2275.	[func]		Add support to dig to perform IXFR queries over UDP.
			[RT #17235]

2274.	[func]		Log zone transfer statistics. [RT #17161]

2273.	[bug]		Adjust log level to WARNING when saving inconsistant
			stub/slave master and journal files. [RT# 17279]

2272.	[bug]		Handle illegal dnssec-lookaside trust-anchor names.
			[RT #17262]

2271.	[bug]		Fix a memory leak in http server code [RT #17100]

2270.	[bug]		dns_db_closeversion() version->writer could be reset
			before it is tested. [RT #17290]

2269.	[contrib]	dbus memory leaks and missing va_end calls. [RT #17232]

2268.	[bug]		0.IN-ADDR.ARPA was missing from the empty zones
			list.

	--- 9.5.0b1 released ---

2267.   [bug]           Radix tree node_num value could be set incorrectly,
                        causing positive ACL matches to look like negative
                        ones.  [RT #17311]

2266.	[bug]		client.c:get_clientmctx() returned the same mctx
			once the pool of mctx's was filled. [RT #17218]

2265.	[bug]		Test that the memory context's basic_table is non NULL
			before freeing.  [RT #17265]

2264.	[bug]		Server prefix length was being ignored. [RT #17308]

2263.	[bug]		"named-checkconf -z" failed to set default value
			for "check-integrity".  [RT #17306]

2262.	[bug]		Error status from all but the last view could be
			lost. [RT #17292]

2261.   [bug]           Fix memory leak with "any" and "none" ACLs [RT #17272]

2260.	[bug]		Reported wrong clients-per-query when increasing the
                        value. [RT #17236]

2259.	[placeholder]
